fixed product/css overflow

--- a/src/Components/Shop/Shop.module.css
+++ b/src/Components/Shop/Shop.module.css
@@ -10,22 +10,25 @@
 }
 
 .catalog {
-  margin: 45px;
+  margin: 30px;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(3, 360px);
-  gap: 30px;
+  grid-template-columns: repeat(auto-fill, 200px);
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 25px;
   height: 100%;
 }
 
 .product {
+  aspect-ratio: 1 / 1.5;
   box-sizing: content-box;
+  margin: auto;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   gap: 5px;
   text-align: center;
-  overflow: hidden;
-  padding: 18px 20px;
+  padding: 12px 10px;
   background-image: url(/images/background-paint-still-life.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -40,20 +43,19 @@
 }
 
 .thumbnail {
-  border-radius: 6px;
+  border-radius: 5px;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
   width: 100%;
-  height: 100%;
-  margin: auto;
   flex-grow: 1;
   opacity: 0.9;
 }
 
 .description {
-  width: 100%;
-  height: 150px;
+  height: 100px;
   display: grid;
 
-  grid-template-rows: 75% 25%;
+  grid-template-rows: 70% 30%;
   backdrop-filter: blur(1px);
 }
 
@@ -68,15 +70,16 @@
 
 .description h3 {
   font-family: 'Rubik glitch';
-  font-size: 1.15em;
+  font-size: 16px;
   line-height: 1;
+  padding: 0;
+  margin: 0 2px;
 }
 
 .buttons {
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: center;
   position: relative;
   justify-content: center;
 
@@ -84,26 +87,30 @@
 
 .buttons p {
   width: fit-content;
-  font-size: 1em;
+  font-size: 13px;
   color: var(--brightYellow);
   background-color: var(--bgdark);
-  padding: 3px 7px;
+  padding: 0 8px;
+  display: flex;
+  align-items: center;
   border-radius: 3px;
   text-align: center;
 }
 
 .buttons button {
-  height: 70%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
   width: 1.5em;
   position: absolute;
-  right: 0;
+  right: 5px;
+  bottom: 0;
 }
 
 .icon {
   width: 100%;
   border-radius: 4px;
-  padding: 1px 2px;
   transition: transform ease-in-out 0.1s;
+  object-fit: cover;
 }
 
 .icon:hover {
